# mummer_integration_msgs

./: CMakeLists.txt  README.md  package.xml
action/: Pointing.action
deictic_gestures_msgs/: CMakeLists.txt  package.xml
dialogue_msgs/action/: dialogue_action.action
head_manager_msgs/: CMakeLists.txt  package.xml
head_manager_msgs/msg/: TargetWithExpiration.msg  TargetWithPriority.msg
msg/: Agent.msg  AgentArray.msg  CoordinationSignal.msg  Fact.msg  FactArrayStamped.msg  HeadStateVector.msg  Perspective.msg  PerspectiveArray.msg  TargetWithDuration.msg
multimodal_human_monitor_msgs/: CMakeLists.txt  package.xml
multimodal_human_monitor_msgs/srv/: FindAlternateId.srv
mummer_navigation_msgs/: CMakeLists.txt  package.xml
nao_interaction_msgs/: CMakeLists.txt  package.xml
nao_interaction_msgs/srv/: GoToPosture.srv
ontologenius_msgs/: CMakeLists.txt  package.xml
perspectives_msgs/: CMakeLists.txt  package.xml
perspectives_msgs/msg/: AgentArrayStamped.msg  Object.msg  PerspectiveArray.msg  PerspectiveArrayStamped.msg
perspectives_msgs/srv/: GetAllFacts.srv  HasMesh.srv  StartFact.srv
pointing_planner_msgs/: CMakeLists.txt  package.xml
pointing_planner_msgs/srv/: VisibilityScore.srv
route_description_msgs/: CMakeLists.txt  package.xml
route_description_msgs/srv/: VerbalizeRegionRoute.srv
semantic_route_description_msgs/: CMakeLists.txt  package.xml
semantic_route_description_msgs/msg/: Route.msg
semantic_route_description_msgs/srv/: SemanticRoute.srv
speech_wrapper_msgs/: CMakeLists.txt  package.xml
srv/: EndFact.srv  GetRouteDescription.srv  MonitorHumans.srv  PointingPlanner.srv  SpeakTo.srv
