<package>
  <name>mummer_navigation_msgs</name>
  <version>0.0.1</version>
  <description>
    This package holds the mummer navigation messages
  </description>
  <maintainer>guilhembn</maintainer>
 
  <license>BSD-3</license>

  <author>guilhembn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
